--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ sup {
   break-inside: avoid;
 }
 
+.main-blocks {
+  break-inside: avoid;
+}
+
+
 * {
   /* Override default right margin for sidebar*/
   --pagedjs-margin-right: 0.2in;
@@ -42,6 +47,15 @@ sup {
   --decorator-border: 2px solid #bdd7e7; /* Make timeline a blue as well*/
 }
 
+/* Avoid sidebar on all pages but first */
+.pagedjs_page:not(:first-of-type) {
+  --sidebar-width: 0rem;
+  --sidebar-background-color: #ffffff;
+  --main-width: calc(var(--content-width) - var(--sidebar-width));
+  --decorator-horizontal-margin: 0.2in;
+}
+
+
 .details .place {
   margin-top: 0.25rem;
 }
@@ -53,6 +67,11 @@ sup {
 /* Laptop icon isn't centered by default which is lame */
 .fa-laptop {
   margin-left: -3px;
+}
+
+/* awards icon isn't centered by default which is lame */
+.fa-award {
+  margin-left: 2px;
 }
 
 /* When we have links at bottom in a list make sure they actually are numbered */
